[tool.isort]
known_third_party = ["pytest", "sphinx_rtd_theme"]

[tool.poetry]
name = "fhirdatetime"
version = "0.1.0"
description = ""
authors = ["Mike Mabey <mike.mabey@ooda-health.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.12.0"
Sphinx = "^3.5.4"
sphinx-rtd-theme = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
